[package]
name = "code_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.86"
thiserror = "1.0.63"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
zip = "2.1.6"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]